--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ionic App</title>
+    <title>
+      ZTools: Your All-In-One Digital Toolbox for Everyday Tasks - Zaions
+    </title>
 
     <base href="/" />
 
@@ -16,7 +18,7 @@
 
     <link rel="manifest" href="/manifest.json" />
 
-    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    <link rel="shortcut icon" type="image/svg" href="/product-favicon.svg" />
 
     <!-- title -->
     <meta
