updated, android app released

--- a/index.html
+++ b/index.html
@@ -44,5 +44,57 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <div style="position: fixed; top: -100%">
+      <h1
+        title="https://zaions.com/ahsan"
+        rel="related"
+        style="position: fixed; top: -100%"
+      >
+        Ahsan Mahmood (AONEAHSAN) - Zaions.com - Freelancer - Top Rated Seller,
+        5 Star Software Development Services Provider (Web, Mobile & Desktop App
+        Development).
+      </h1>
+      <h2 style="position: fixed; top: -100%">
+        Ahsan Mahmood's (Aoneahsan) Mobile/WhatsApp:
+        <a title="tel:+923046619706" target="_blank" rel="related"
+          >+923046619706</a
+        >
+        <br />
+        Ahsan Mahmood's (Aoneahsan) Email:
+        <a title="mailto:aoneahsan@gmail.com" target="_blank" rel="related"
+          >aoneahsan@gmail.com</a
+        >
+        <br />
+        Portfolio:
+        <a href="https://aoneahsan.com" target="_blank" rel="related"
+          >https://aoneahsan.com</a
+        >
+        <br />
+        Ahsan Mahmood's (Aoneahsan) Upwork:
+        <a href="https://zaions.com/ahsan-upwork" target="_blank" rel="related"
+          >https://zaions.com/ahsan-upwork</a
+        >
+        <br />
+        Ahsan Mahmood's (Aoneahsan) Fiverr:
+        <a href="https://zaions.com/ahsan-fiverr" target="_blank" rel="related"
+          >https://zaions.com/ahsan-fiverr</a
+        >
+        <br />
+        Ahsan Mahmood's (Aoneahsan) Linkedin Profile:
+        <a href="https://aoneahsan.com/linkedin" target="_blank" rel="related"
+          >https://aoneahsan.com/linkedin</a
+        >
+        <br />
+        Ahsan Mahmood's (Aoneahsan) Github Profile:
+        <a href="https://aoneahsan.com/github" target="_blank" rel="related"
+          >https://aoneahsan.com/github</a
+        >
+        <br />
+        Business Website:
+        <a href="https://zaions.com/bio" target="_blank" rel="related"
+          >https://zaions.com/bio</a
+        >
+      </h2>
+    </div>
   </body>
 </html>
